Fixing mobile scaling and height on ios

--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -22,6 +22,7 @@ $pic1-3: (1/3)*$pic-size;
 body {
 	width: 100vw;
 	height: 100vh;
+    min-height: 750px;
 	background:  url("../media/trumpwall.jpg") no-repeat center center fixed; 
   	background-size: cover;
   	margin: 0;
